--- a/En-Luna/Views/Solicitations/View.cshtml
+++ b/En-Luna/Views/Solicitations/View.cshtml
@@ -23,7 +23,7 @@
                     <div class="row">
                         <div class="col">
                             @Html.LabelFor(model => model.Solicitor, htmlAttributes: new { @class = "control-label" })
-                            <a href="#" class="card-link">@Model.Solicitor.Account.Username</a>
+                            <a class="btn btn-link" asp-controller="Users" asp-action="Details" asp-route-id="@Model.Solicitor.Account.Id">@Model.Solicitor.Account.Username</a>
                         </div>
                     </div>
                     <div class="row">
